tests/ui/zero_field_struct.rs
#[vecn::vector]
struct TupleStruct();

#[vecn::vector]
struct NamedStruct{}

fn main() {}
